# scolar

./: .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  pyproject.toml  settings.toml
.github/workflows/: ci.yml
src/scolar/: __init__.py  answer.py  cache.py  config.py  discovery.py  fetcher.py  main.py  models.py  parser.py  pipeline.py  report.py  search.py  storage.py  summarizer.py  threads.py  workflow.py
tests/: test_answer.py  test_cli.py  test_config.py  test_discovery.py  test_integration.py  test_report.py  test_search.py  test_storage.py  test_threads.py
