[project]
name = "scolar"
version = "0.1.0"
description = "Async web research assistant with LLM assessments"
readme = "README.md"
authors = [
    { name = "Nicolas Iderhoff", email = "hello@niid.xyz" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2025.4.15",
    "openai>=2.1.0",
    "pydantic>=2.7.0",
    "dynaconf>=3.2.0",
]

[project.scripts]
scolar = "scolar.main:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
    "mypy>=1.18.2",
]

[tool.mypy]
python_version = "3.13"
packages = ["scolar", "tests"]
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true
